added postgrae sql and updated the code